# Stationeers

./: .gitignore  CNAHGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  README.md  README.zh.md
.github/actions/build-cmake-project/: action.yml
.github/actions/setup-build-env/: action.yml
.github/actions/setup-cpp-env/: action.yml
.github/workflows/: _ic10-core.yml  _ic10-node.yml  _static-analysis.yml  _stationscript-core.yml  build.yml  ci.yml  ic10-core.yml  ic10-node.yml  static-analysis.yml  stationscript-core.yml  test.yml
code/backend/compiler/: .clang-format  CMakeLists.txt  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
code/backend/compiler/.github/actions/run-tests/: action.yml
code/backend/compiler/.github/workflows/: build.yml
code/backend/compiler/IC10/: CMakeLists.txt  Doxyfile  main.cpp  main.hpp
code/backend/compiler/IC10/include/ic10/lexer/: lexer.hpp  token.hpp
code/backend/compiler/IC10/include/ic10/locals/: local.hpp
code/backend/compiler/IC10/include/ic10/locals/languages/: en_us.hpp  zh_hans.hpp
code/backend/compiler/IC10/include/ic10/parser/: parser.hpp
code/backend/compiler/IC10/include/ic10/parser/ast/: ast.hpp  ast_binary_ins.hpp  ast_binary_ins.inl  ast_node.hpp  ast_node.inl  ast_nullary_ins.hpp  ast_nullary_ins.inl  ast_quaternary_ins.hpp  ast_quaternary_ins.inl  ast_quinary_ins.hpp  ast_quinary_ins.inl  ast_senary_ins.hpp  ast_senary_ins.inl  ast_ternary_ins.hpp  ast_ternary_ins.inl  ast_unary_ins.hpp  ast_unary_ins.inl
code/backend/compiler/IC10/include/ic10/pch/: ast.hpp
code/backend/compiler/IC10/include/ic10/semantic/: analyser.hpp  analyser.inl  semantic.hpp  semantic.inl
code/backend/compiler/IC10/src/lexer/: lexer.cpp  token.cpp
code/backend/compiler/IC10/src/parser/: ast.cpp  parser.cpp
code/backend/compiler/IC10/src/semantic/: analyser.cpp  semantic.cpp
code/backend/compiler/StationScript/: CMakeLists.txt  debug_findgoto  debug_lalr  debug_simple  debug_states  debug_verify  test_lalr  test_lalr.cpp
code/backend/compiler/StationScript/include/station_script/parser/lalr/: lalr.hpp
code/backend/compiler/StationScript/src/lexer/: token.cpp
code/backend/compiler/cmake/: node.cmake  pybind11.cmake
code/backend/compiler/common/: CMakeLists.txt
code/backend/compiler/common/include/common/async/: coroutine_state.hpp  coroutine_state.inl  future.hpp  future.inl  promise.hpp  promise.inl  shared_state.hpp  shared_state.inl  task.hpp  task.inl
code/backend/compiler/common/include/common/exception/: debug.hpp  debug.inl  diagnostic.hpp  diagnostic.inl  error.hpp  error.inl
code/backend/compiler/common/include/common/locals/: local.hpp  local.inl
code/backend/compiler/common/include/common/utils/: bidirectional_map.hpp  bidirectional_map.inl  common.hpp  enum_to_str.hpp  enum_to_str.inl  fstr.hpp  fstr.inl  position.hpp  type_list.hpp  type_map.hpp  type_map.inl
code/backend/compiler/common/include/pch/: async.hpp  local.hpp  utils.hpp
code/backend/compiler/common/src/async/: task.cpp
code/backend/compiler/common/src/exception/: debug.cpp  error.cpp
code/backend/compiler/common/src/utils/: common.cpp  position.cpp
code/backend/compiler/exports/: CMakeLists.txt
code/backend/compiler/exports/IC10/node/: CMakeLists.txt  Doxyfile  main.hpp
code/backend/compiler/exports/IC10/node/include/: analyser_adapter.hpp  ast_adapter.hpp  lexer_adapter.hpp  local_adapter.hpp  locals.hpp  parser_adapter.hpp  symbol_table_adapter.hpp  token_adapter.hpp
code/backend/compiler/exports/IC10/node/src/: analyser_adapter.cpp  ast_adapter.cpp  build.cpp  lexer_adapter.cpp  local_adapter.cpp  locals.cpp  parser_adapter.cpp  symbol_table_adapter.cpp  token_adapter.cpp  win_delay_load_hook.cc
code/backend/compiler/exports/IC10/python/: CMakeLists.txt
code/backend/compiler/exports/IC10/python/include/: analyser_adapter.hpp  ast_adapter.hpp  lexer_adapter.hpp  local_adapter.hpp  parser_adapter.hpp  symbol_table_adapter.hpp  token_adapter.hpp
code/backend/compiler/exports/IC10/python/src/: analyser_adapter.cpp  ast_adapter.cpp  build.cpp  lexer_adapter.cpp  local_adapter.cpp  parser_adapter.cpp  symbol_table_adapter.cpp  token_adapter.cpp
code/backend/compiler/exports/common/node/: CMakeLists.txt
code/backend/compiler/exports/common/node/include/common_node/: base.hpp  base.inl  build.hpp  error_adapter.hpp  pos_adapter.hpp
code/backend/compiler/exports/common/node/src/: base.cpp  build.cpp  error_adapter.cpp  pos_adapter.cpp
code/backend/compiler/exports/common/python/: CMakeLists.txt
code/backend/compiler/exports/common/python/include/common_python/: base.hpp  build.hpp  error_adapter.hpp  pos_adapter.hpp
code/backend/compiler/exports/common/python/src/: build.cpp  error_adapter.cpp  pos_adapter.cpp
code/backend/compiler/scripts/: Build.psm1  IC10NodeExport.ps1  IC10PythonExport.ps1  export_ic10_node.ps1  product-info.json
code/backend/compiler/tests/: CMakeLists.txt  grammarTest.ic
code/backend/compiler/tests/common/: CMakeLists.txt  test_utils.cpp
code/backend/compiler/tests/ic10/: CMakeLists.txt  test_lexer.cpp  test_parser.cpp
code/backend/compiler/tests/ic10/node/: test.js  test.ts  utils.ts
code/backend/compiler/tests/ic10/node/__tests__/: api.test.ts
code/backend/compiler/tests/ic10/python/: __init__.py  test_api.py
code/backend/compiler/tests/node/ic10/: CNAHGELOG.md  README.md  README.zh.md  package.json  tsconfig.json
code/backend/compiler/tests/node/ic10/src/: index.d.ts
code/backend/compiler/tests/python/ic10/: ic10_python.pyi
code/backend/compiler/tests/station_script/: CMakeLists.txt
code/plugins/vscode/ic10-language-support/: CHANGELOG.md  README.md  package.json  tsconfig.json
code/plugins/vscode/ic10-language-support/client/: package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
code/plugins/vscode/ic10-language-support/scripts/: e2e.sh
code/plugins/vscode/ic10-language-support/server/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.tsbuildinfo
docs/: IC10.g4
docs/doxygen/: header.html
(+19 files in other folders)
